PROJECT(bitop)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR} ../include)
LINK_DIRECTORIES(/home/yfjiang/opensource/decode-leveldb/out-static)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
set(CMAKE_CXX_FLAGS "-g")
SET(SRC test.cc)
ADD_EXECUTABLE(test ${SRC})
TARGET_LINK_LIBRARIES(test libleveldb.a pthread)
